name:           journal
version:        0.1.0.0
author:         Rob Nugen <rob.nugen@robnugen.com>
build-type:     Simple
cabal-version:  >=1.10

executable site
  main-is:            site.hs
  ghc-options:        -Wall -O2 -threaded
  default-language:   Haskell2010
  build-depends:      base >= 4.7,
                      filepath >= 1.3,
                      hakyll == 4.5.*,
                      tagsoup >= 0.13
